--- a/create-point.html
+++ b/create-point.html
@@ -19,7 +19,7 @@
     <header>
       <img src="/icones/logo.svg" alt="Logomarca">
 
-      <a href="#">
+      <a href="index.html">
         <span></span>
         Voltar para Home</a>
     </header>
